# tempest-type

tempest-type/: Cargo.toml  README.md  build_mac_app.sh
tempest-type/TempestType.app/Contents/: Info.plist
tempest-type/TempestType.app/Contents/Resources/: AppIcon.icns
tempest-type/TempestType.app/Contents/_CodeSignature/: CodeResources
tempest-type/src/: audio.rs  clipboard.rs  config.rs  error.rs  hotkey.rs  keyboard.rs  main.rs  ollama.rs  transcription.rs
